--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "got": "^14.4.7",
     "http-proxy-agent": "^7.0.2",
     "meow": "^13.2.0",
+    "socks": "^2.8.5",
     "socks-proxy-agent": "^8.0.5",
     "user-agents": "^1.1.593",
     "winston": "^3.17.0"
