feat: add mkform tool

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ava": "^6.4.0"
   },
   "dependencies": {
+    "form-data": "^4.0.4",
     "got": "^14.4.7",
     "meow": "^13.2.0",
     "mime": "^4.0.7",
